@@ -1,3 +1,7 @@
+2011-09-06    <jin@localhost.localdomain>
+
+	* list.html: add eth1, eth2 table.
+
 2011-09-02    <jin@localhost.localdomain>
 
 	* list.html: add eth0 table(ipv4 only)x
